exports[`accent`] = `
<button
  className=""
  data-react-toolbox="button"
  disabled={false}
  href={undefined}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchStart={[Function]}
  type="button">
  Accent
</button>
`;

exports[`default`] = `
<button
  className=""
  data-react-toolbox="button"
  disabled={false}
  href={undefined}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchStart={[Function]}
  type="button">
  Default
</button>
`;

exports[`disabled`] = `
<button
  className=""
  data-react-toolbox="button"
  disabled={true}
  href={undefined}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchStart={[Function]}
  type="button">
  Disabled
</button>
`;

exports[`primary`] = `
<button
  className=""
  data-react-toolbox="button"
  disabled={false}
  href={undefined}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchStart={[Function]}
  type="button">
  Primary
</button>
`;
